# reedbase

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.reedbase/metrics/: query_duration.csv  test.csv  test_flush.csv  test_metric.csv
.workbench/: README.md  baseline-metrics.txt
.workbench/docs/: COMPETITORS.md  ECOMMERCE_GAP_ANALYSIS.md  IMPLEMENTATION-STATUS.md  MISSING_FEATURES.md  PERFORMANCE.md  REFACTORING_PLAN.md  SESSION_HANDOVER.md  STATUS.md  feature_checklist.csv  refactoring_audit.csv
.workbench/tests/: cli_test.rs  concurrency_test.rs  correctness_test.rs  database_api_test.rs  error_handling_test.rs  performance_test.rs  test_utils.rs
.workbench/tickets/: 020-STORE-01-types-wal.md  020-STORE-02-node-page.md  020-STORE-03-tree-iter.md  020-STORE-04-tables.md  020-STORE-05-indices.md  020-STORE-06-phase-complete.md  030-VALIDATE-01-schema.md  030-VALIDATE-02-registry.md  040-API-01-database-types-stats.md  040-API-02-database-core-query.md  040-API-03-database-execute-index.md  040-API-03-execute-index.md  040-API-04-reedql-types-parser-analyzer.md  040-API-04-reedql-types-parser.md  040-API-05-reedql-executor-planner.md  040-API-06-functions.md  050-PROCESS-01-concurrent.md  060-OPS-01-backup.md  060-OPS-02-versioning.md  060-OPS-03-metrics.md  070-LOG-01-log-system.md  070-MERGE-02-merge-operations.md  080-CLI-01-binary-and-cli.md  090-VERIFY-01-function-coverage.md  090-VERIFY-02-test-coverage.md  090-VERIFY-03-claude-compliance.md  090-VERIFY-04-documentation.md  EXECUTIVE-SUMMARY.md  PROCESS_LOGIC.md
.zed/: settings.json
benches/: cms_comparison.rs  concurrent.rs  queries.rs  versioning.rs
current/: Cargo.toml
current/src/: error.rs  error_test.rs  lib.rs
current/src/core/: mod.rs  paths.rs  paths_test.rs  validation.rs  validation_test.rs
current/src/store/: mod.rs
current/src/store/btree/: mod.rs  node.rs  page.rs  page_test.rs  types.rs  types_test.rs  wal.rs
last/: Cargo.toml
last/benches/: cms_comparison.rs  concurrent.rs  core_ops.rs  queries.rs  versioning.rs
last/examples/: demo_testdb.rs
last/src/: error.rs  lib.rs
last/src/backup/: create.rs  list.rs  restore.rs
last/src/btree/: btree_test.rs  btree_test.rs.bak  iter.rs  mod.rs  node.rs  page.rs  tree.rs  types.rs  wal.rs
last/src/concurrent/: lock.rs  lock_test.rs  mod.rs  queue.rs  types.rs
last/src/conflict/: mod.rs  types.rs
last/src/database/: database.rs  execute.rs  mod.rs  stats.rs
last/src/functions/: aggregations.rs  aggregations_test.rs  cache.rs  cache_test.rs  computed.rs  computed_test.rs  mod.rs  transformations.rs  transformations_test.rs
last/src/indices/: btree_index.rs  builder.rs  builder_tests.rs  hashmap_index.rs  hierarchy.rs  indices_test.rs  mod.rs  namespace.rs  types.rs
last/src/log/: decoder.rs  encoder.rs  encoder_test.rs  types.rs  validator.rs  validator_test.rs
last/src/merge/: csv.rs  diff.rs
last/src/metrics/: aggregator.rs  aggregator_test.rs  collector.rs  collector_test.rs  mod.rs  mod_test.rs  types.rs  types_test.rs
last/src/reedql/: analyzer.rs  analyzer_test.rs  executor.rs  executor_test.rs  mod.rs  parser.rs  planner.rs  planner_test.rs  types.rs
last/src/registry/: dictionary.rs  dictionary_test.rs  init.rs  mod.rs
last/src/schema/: mod.rs  rbks.rs  types.rs  validation_test.rs
last/src/tables/: csv_parser.rs  csv_parser_test.rs  helpers.rs  helpers_test.rs  mod.rs  table.rs  table_test.rs  types.rs
last/src/version/: delta.rs  delta_test.rs  index.rs  rebuild.rs
scripts/: benchmark_mysql.sh  benchmark_postgres.sh  quality-check.sh  regression-verify.sh
src/backup/: mod.rs  tests.rs  types.rs
src/btree/: page.rs  tree.rs
(+106 files in other folders)
