[workspace]
members = [
    "current",
    "last",
]

resolver = "2"

[workspace.package]
version = "0.2.0-beta"
edition = "2024"
authors = ["Vivian Voss <ask@vvoss.dev>"]
license = "Apache-2.0"
repository = "https://github.com/vvoss-dev/reedbase"

[workspace.dependencies]
# Dependencies (alphabetically sorted)
anyhow = "1.0"
assert_cmd = "2.0"
bincode = "1.3"
bsdiff = "0.2"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
fs2 = "0.4"
memmap2 = "0.9"
once_cell = "1.20"
predicates = "3.0"
regex = "1.11"
rustyline = "14.0"
serial_test = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
toml = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
xz2 = "0.1"
