[package]
name = "reedbase-last"
version = "0.1.0"
edition = "2021"
description = "ReedBase Last Version (Reference) - A serious database built on 'just CSV files' – with versioning, transactions, and a custom query language that makes it surprisingly fast."

[dependencies]
once_cell = "1.20"
bsdiff = "0.2"
xz2 = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
crc32fast = "1.4"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.11"
chrono = "0.4"
memmap2 = "0.9"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[[bench]]
name = "core_ops"
harness = false

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "cms_comparison"
harness = false

# Disabled: Missing APIs (merge::auto_merge, TableLock::acquire)
# [[bench]]
# name = "concurrent"
# harness = false

# Disabled: Missing APIs (backup::restore_backup signature changed)
# [[bench]]
# name = "versioning"
# harness = false

[[bin]]
name = "generate_cms_report"
path = "src/bin/generate_cms_report.rs"

# Integration tests in .workbench/ (dev workspace)
[[test]]
name = "cli_test"
path = ".workbench/tests/cli_test.rs"

[[test]]
name = "concurrency_test"
path = ".workbench/tests/concurrency_test.rs"

[[test]]
name = "correctness_test"
path = ".workbench/tests/correctness_test.rs"

[[test]]
name = "database_api_test"
path = ".workbench/tests/database_api_test.rs"

[[test]]
name = "error_handling_test"
path = ".workbench/tests/error_handling_test.rs"

[[test]]
name = "performance_test"
path = ".workbench/tests/performance_test.rs"
